# lab_oop_6

./: CMakeLists.txt  NPC.hpp  bull.cpp  bull.hpp  dragon.cpp  dragon.hpp  factory.cpp  main.cpp  testik.txt  tests.cpp  toad.cpp  toad.hpp
