cmake_minimum_required(VERSION 3.20)
project(lab_OOP_6)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(googletest)

add_executable(main main.cpp observer.cpp factory.cpp NPC.cpp dragon.cpp bull.cpp toad.cpp)
add_executable(test tests.cpp observer.cpp factory.cpp NPC.cpp dragon.cpp bull.cpp toad.cpp)


target_link_libraries(test PRIVATE GTest::gtest_main)

include(GoogleTest)
gtest_discover_tests(test)